--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,3 +11,18 @@
   title = {{Topography and Vegetation as Predictors of Snow Water Equivalent across the Alpine Treeline Ecotone at Lee Ridge Glacier National Park, Montana, U.S.A}},
   journal = {Arctic, Antarctic, and Alpine Research},
 }
+
+
+@article{Barnett_2005,
+  doi = {10.1038/nature04141},
+  url = {https://doi.org/10.1038%2Fnature04141},
+  year = {2005},
+  month = {nov},
+  publisher = {Springer Nature},
+  volume = {438},
+  number = {7066},
+  pages = {303--309},
+  author = {T. P. Barnett and J. C. Adam and D. P. Lettenmaier},
+  title = {{Potential impacts of a warming climate on water availability in snow-dominated regions}},
+  journal = {Nature},
+}
