added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -26,3 +26,14 @@
   title = {{Potential impacts of a warming climate on water availability in snow-dominated regions}},
   journal = {Nature},
 }
+
+
+@article{Raleigh_2017,
+  doi = {10.1002/2016gl071999},
+  url = {https://doi.org/10.1002%2F2016gl071999},
+  year = {2017},
+  publisher = {Wiley-Blackwell},
+  author = {Mark S. Raleigh and Eric E. Small},
+  title = {{Snowpack density modeling is the primary source of uncertainty when mapping basin-wide {SWE} with lidar}},
+  journal = {Geophysical Research Letters},
+}
