added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -37,3 +37,18 @@
   title = {{Snowpack density modeling is the primary source of uncertainty when mapping basin-wide {SWE} with lidar}},
   journal = {Geophysical Research Letters},
 }
+
+
+@article{Wrzesien_2017,
+  doi = {10.1175/jhm-d-16-0246.1},
+  url = {https://doi.org/10.1175%2Fjhm-d-16-0246.1},
+  year = {2017},
+  month = {apr},
+  publisher = {American Meteorological Society},
+  volume = {18},
+  number = {4},
+  pages = {1101--1119},
+  author = {Melissa L. Wrzesien and Michael T. Durand and Tamlin M. Pavelsky and Ian M. Howat and Steven A. Margulis and Laurie S. Huning},
+  title = {{Comparison of Methods to Estimate Snow Water Equivalent at the Mountain Range Scale: A Case Study of the California Sierra Nevada}},
+  journal = {Journal of Hydrometeorology},
+}
