added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -52,3 +52,17 @@
   title = {{Comparison of Methods to Estimate Snow Water Equivalent at the Mountain Range Scale: A Case Study of the California Sierra Nevada}},
   journal = {Journal of Hydrometeorology},
 }
+
+
+@article{Cai_2017,
+  doi = {10.1016/j.rse.2017.03.006},
+  url = {https://doi.org/10.1016%2Fj.rse.2017.03.006},
+  year = {2017},
+  month = {may},
+  publisher = {Elsevier {BV}},
+  volume = {193},
+  pages = {244--256},
+  author = {Shanshan Cai and Dongyue Li and Michael Durand and Steven A. Margulis},
+  title = {{Examination of the impacts of vegetation on the correlation between snow water equivalent and passive microwave brightness temperature}},
+  journal = {Remote Sensing of Environment},
+}
