added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -66,3 +66,17 @@
   title = {{Examination of the impacts of vegetation on the correlation between snow water equivalent and passive microwave brightness temperature}},
   journal = {Remote Sensing of Environment},
 }
+
+
+@article{Painter_2016,
+  doi = {10.1016/j.rse.2016.06.018},
+  url = {https://doi.org/10.1016%2Fj.rse.2016.06.018},
+  year = {2016},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {184},
+  pages = {139--152},
+  author = {Thomas H. Painter and Daniel F. Berisford and Joseph W. Boardman and Kathryn J. Bormann and Jeffrey S. Deems and Frank Gehrke and Andrew Hedrick and Michael Joyce and Ross Laidlaw and Danny Marks and Chris Mattmann and Bruce McGurk and Paul Ramirez and Megan Richardson and S. McKenzie Skiles and Felix C. Seidel and Adam Winstral},
+  title = {{The Airborne Snow Observatory: Fusion of scanning lidar imaging spectrometer, and physically-based modeling for mapping snow water equivalent and snow albedo}},
+  journal = {Remote Sensing of Environment},
+}
