--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -80,3 +80,17 @@
   title = {{The Airborne Snow Observatory: Fusion of scanning lidar imaging spectrometer, and physically-based modeling for mapping snow water equivalent and snow albedo}},
   journal = {Remote Sensing of Environment},
 }
+
+
+@article{L_pez_Moreno_2013,
+  doi = {10.1016/j.advwatres.2012.08.010},
+  url = {https://doi.org/10.1016%2Fj.advwatres.2012.08.010},
+  year = {2013},
+  month = {may},
+  publisher = {Elsevier {BV}},
+  volume = {55},
+  pages = {40--52},
+  author = {J.I. L{\'{o}}pez-Moreno and S.R. Fassnacht and J.T. Heath and K.N. Musselman and J. Revuelto and J. Latron and E. Mor{\'{a}}n-Tejeda and T. Jonas},
+  title = {{Small scale spatial variability of snow density and depth over complex alpine terrain: Implications for estimating snow water equivalent}},
+  journal = {Advances in Water Resources},
+}
