added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -94,3 +94,17 @@
   title = {{Small scale spatial variability of snow density and depth over complex alpine terrain: Implications for estimating snow water equivalent}},
   journal = {Advances in Water Resources},
 }
+
+
+@article{L_pez_Moreno_2005,
+  doi = {10.1002/hyp.5840},
+  url = {https://doi.org/10.1002%2Fhyp.5840},
+  year = {2005},
+  publisher = {Wiley-Blackwell},
+  volume = {19},
+  number = {16},
+  pages = {3167--3176},
+  author = {J. I. L{\'{o}}pez-Moreno and D. Nogu{\'{e}}s-Bravo},
+  title = {{A generalized additive model for the spatial distribution of snowpack in the Spanish Pyrenees}},
+  journal = {Hydrological Processes},
+}
