added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -108,3 +108,18 @@
   title = {{A generalized additive model for the spatial distribution of snowpack in the Spanish Pyrenees}},
   journal = {Hydrological Processes},
 }
+
+
+@article{Jonas_2009,
+  doi = {10.1016/j.jhydrol.2009.09.021},
+  url = {https://doi.org/10.1016%2Fj.jhydrol.2009.09.021},
+  year = {2009},
+  month = {nov},
+  publisher = {Elsevier {BV}},
+  volume = {378},
+  number = {1-2},
+  pages = {161--167},
+  author = {T. Jonas and C. Marty and J. Magnusson},
+  title = {{Estimating the snow water equivalent from snow depth measurements in the Swiss Alps}},
+  journal = {Journal of Hydrology},
+}
