added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -123,3 +123,13 @@
   title = {{Estimating the snow water equivalent from snow depth measurements in the Swiss Alps}},
   journal = {Journal of Hydrology},
 }
+
+
+@misc{noauthor_grass_nodate,
+  title = {{{GRASS} {GIS} {ON} {HIGH} {PERFORMANCE} {COMPUTING} {WITH} {MPI}, {OPENMP} {AND} {NINF}-{G} {PROGRAMMING} {FRAMEWORK}}},
+  url = {https://www.researchgate.net/publication/267841702_GRASS_GIS_ON_HIGH_PERFORMANCE_COMPUTING_WITH_MPI_OPENMP_AND_NINF-G_PROGRAMMING_FRAMEWORK},
+  abstract = {ResearchGate is a network dedicated to science and research. Connect, collaborate and discover scientific publications, jobs and conferences. All for free.},
+  urldate = {2017-05-10},
+  journal = {ResearchGate},
+  file = {Snapshot:/Users/ianbolliger/Library/Application Support/Zotero/Profiles/394xoa9k.default/zotero/storage/7Z6R5ZI6/267841702_GRASS_GIS_ON_HIGH_PERFORMANCE_COMPUTING_WITH_MPI_OPENMP_AND_NINF-G_PROGRAMMING_FRAMEWO.pdf:application/pdf},
+}
