added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -133,3 +133,17 @@
   journal = {ResearchGate},
   file = {Snapshot:/Users/ianbolliger/Library/Application Support/Zotero/Profiles/394xoa9k.default/zotero/storage/7Z6R5ZI6/267841702_GRASS_GIS_ON_HIGH_PERFORMANCE_COMPUTING_WITH_MPI_OPENMP_AND_NINF-G_PROGRAMMING_FRAMEWO.pdf:application/pdf},
 }
+
+
+@article{akhter_grass_2010,
+  title = {{{GRASS} {GIS} {ON} {HIGH} {PERFORMANCE} {COMPUTING} {WITH} {MPI}, {OPENMP} {AND} {NINF}-{G} {PROGRAMMING} {FRAMEWORK}}},
+  volume = {XXXVIII},
+  url = {https://www.researchgate.net/publication/267841702_GRASS_GIS_ON_HIGH_PERFORMANCE_COMPUTING_WITH_MPI_OPENMP_AND_NINF-G_PROGRAMMING_FRAMEWORK},
+  abstract = {GRASS GIS (Geographical Resources Analysis Support System) is a free, open source software and has been used for Remote Sensing (RS) and Geographic Information System (GIS) data analysis and visualization. Inside GRASS, different modules have been developed for processing satellite images. Currently, GRASS uses databases to handle large datasets and the performance and capabilities of GRASS for large datasets can be greatly improved by integrating GRASS modules with parallel and distributed computing. Multi computer based distributed systems (clusters and Grids) have a large processing capacity for a lower cost, naturally, choice turns towards developing High Performance Computing (HPC) applications. However, it is not an easy job to port GRASS modules directly to HPC environment. The developers of satellite image processing applications need to solve the problem of both data and task distribution, or how to distribute data and tasks among single or multiple clusters environment. The workload in HPC, the bandwidth, the processors speed, parameters of evaluation methods and data size are additional concerning factors. GRASS modules, i.e. i) i.vi is developed by Kamble and Chemin (2006) to process 13 vegetation indices, ii) i.lmf is developed by Akhter et al. (2008) to remove the atmospheric effects from RS images and iii) r.gaswap is developed by Akhter et al. (2006) to find out the crop parameters those are not directly visible from RS images, will be discussed as three case studies to developed GRASS module framework on HPC. Developing the methodology, which enables to run GRASS GIS environment for RS images processing on HPC systems, will be the main concerning issue of this paper. Additionally, different implementations for distributed GRASS models will be discussed on three different programming platforms (MPI, Ninf-G and OpenMP) and their performance will also be presented in this paper.},
+  number = {8},
+  urldate = {2017-05-10},
+  journal = {International Archives of the Photogrammetry, Remote Sensing and Spatial Information Science},
+  author = {Akhter, Shamin and Aida, K and Chemin, Y},
+  year = {2010},
+  file = {Snapshot:/Users/ianbolliger/Library/Application Support/Zotero/Profiles/394xoa9k.default/zotero/storage/7Z6R5ZI6/267841702_GRASS_GIS_ON_HIGH_PERFORMANCE_COMPUTING_WITH_MPI_OPENMP_AND_NINF-G_PROGRAMMING_FRAMEWO.pdf:application/pdf},
+}
